Item1947:    * made JQueryPlugin SafeWikiPlugin compatible, i.e. %BUTTON, %TOGGLE and %TABPANE    * added hoverintent to superfish menu dependencies as without menus are much      to squirrelly    * removed deprecated jquery-all.js files    * added some more nice jqTreeview themes    * FOSWIKI object initializer recognizes json now as well    * some minor fixes to jquery.textboxlist plugin
git-svn-id: http://svn.foswiki.org/trunk@4688 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/button/jquery.button.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/button/jquery.button.css
@@ -3,9 +3,13 @@
 .patternTopic a.jqButton,
 .patternTopic a.jqButton:hover,
 .jqButton:hover,
-.jqButton{background-color:transparent;background-image:url(btn_right.gif);background-position:top right;background-repeat:no-repeat;text-decoration:none;cursor:pointer;display:block;float:left;height:23px;padding:0px;margin:0px 8px 0px 0px;color:black;font-size:13px;}.foswikiTopic a.jqButton:link:hover,
+.jqButton{background-color:transparent;background-image:url(btn_right.gif);background-position:top right;background-repeat:no-repeat;text-decoration:none;cursor:pointer;display:block;float:left;height:23px;padding:0px;color:black;font-size:13px;}.foswikiTopic a.jqButton,
+.patternTopic a.jqButton,
+.jqButton{margin:0px 8px 0px 0px;}.foswikiTopic a.jqButton:link:hover,
 .foswikiTopic a.jqButton:hover,
 .patternTopic a.jqButton:link:hover,
 .patternTopic a.jqButton:hover,
-.jqButton:hover{color:red;}.jqButton span{background-image:url(btn_left.gif);background-position:top left;background-repeat:no-repeat;cursor:pointer;display:block;float:left;height:23px;line-height:23px;padding:0px 8px;margin:0px 3px 0px 0px;font-size:13px;_margin:0px 1px 0px 0px;}.jqButton .jqButtonIcon{background-position:0px 4px;background-repeat:no-repeat;padding:0px 0px 0px 20px;}.jqButton.cyan{background-image:url(btn_cyan_right.gif);}.jqButton.cyan span{background-image:url(btn_cyan_left.gif);}.jqButton.red{background-image:url(btn_red_right.gif);}.jqButton.red span{background-image:url(btn_red_left.gif);}.jqButton.green{background-image:url(btn_green_right.gif);}.jqButton.green span{background-image:url(btn_green_left.gif);}.jqRounded div{padding:10px;margin:0px;}.jqRounded h2{margin:0px;padding:5px;font-size:130%;text-align:center;border:0px;}.jqRounded ol,
+.jqButton:hover{color:red;}.jqButton span{background-image:url(btn_left.gif);background-position:top left;background-repeat:no-repeat;cursor:pointer;display:block;float:left;height:23px;line-height:23px;padding:0px 8px;margin:0px 3px 0px 0px;font-size:13px;_margin:0px 1px 0px 0px;}.jqButton .jqButtonIcon{background-position:0px 4px;background-repeat:no-repeat;padding:0px 0px 0px 20px;}.jqButton.cyan{background-image:url(btn_cyan_right.gif);}.jqButton.cyan span{background-image:url(btn_cyan_left.gif);}.jqButton.red{background-image:url(btn_red_right.gif);}.jqButton.red span{background-image:url(btn_red_left.gif);}.jqButton.green{background-image:url(btn_green_right.gif);}.jqButton.green span{background-image:url(btn_green_left.gif);}.jqButton.simple,
+.jqButton.simple span{background-image:none;}.jqButton.right,
+.jqButton.right:hover{float:right;}.jqRounded div{padding:10px;margin:0px;}.jqRounded h2{margin:0px;padding:5px;font-size:130%;text-align:center;border:0px;}.jqRounded ol,
 .jqRounded ul{margin:0px;padding:0px;padding-left:20px;}
