Item1951: Make changes in whitespace easier to see in a debug diff
git-svn-id: http://svn.foswiki.org/trunk@4702 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/style.css
+++ b/PatternSkin/pub/System/PatternSkin/style.css
@@ -50,8 +50,9 @@ pre {
     border-width:1px;
     padding:1em;
 }
-pre, code, tt {
+pre, code, tt, .foswikiDiffDebug {
     font-family: "Bitstream Vera Sans Mono","Andale Mono",Courier,monospace;
+    white-space:pre;
     font-size:86%;
 }
 
