Item2011: consolidate changes
git-svn-id: http://svn.foswiki.org/branches/Release01x00@4819 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/pub/System/SkinTemplates/default.css
+++ b/core/pub/System/SkinTemplates/default.css
@@ -504,11 +504,11 @@ table.foswikiFormTable th.foswikiFormTableHRow a:visited {
 .foswikiSmallish {
 	font-size:94%; /*S2*/
 }
-.foswikiNew { }
-.foswikiSummary {
-	font-size:86%;
-	line-height:110%; /*S3*/
+.foswikiSearchResult {
+	margin:0 0 1em 0;
 }
+.foswikiNew { }
+.foswikiSummary {}
 .foswikiEmulatedLink {
 	text-decoration:underline;
 }
