--- a/PatternSkin/pub/System/PatternSkin/colors.css
+++ b/PatternSkin/pub/System/PatternSkin/colors.css
@@ -232,9 +232,9 @@ select {
 .foswikiTable th {
    border-color:#e2e2e2;
 }
+.foswikiTable th,
 .foswikiTable th a:link,
-.foswikiTable th a:visited,
-.foswikiTable th a font {
+.foswikiTable th a:visited {
    color:#fff;
 }
 
@@ -310,10 +310,6 @@ table.foswikiFormTable {
 .foswikiAttachments td, 
 .foswikiAttachments th {
    border-color:#e2e2e2;
-}
-.foswikiAttachments .foswikiTable th font,
-table.foswikiFormTable th.foswikiFormTableHRow font {
-   color:#4571d0;
 }
 
 .foswikiFormSteps {
