Item1951: deleted too much: diff debug should still use the same font style as pre and code
git-svn-id: http://svn.foswiki.org/trunk@4870 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/style.css
+++ b/PatternSkin/pub/System/PatternSkin/style.css
@@ -1116,6 +1116,9 @@ h4.patternSearchResultsHeader {
 	margin:2em 0;
 }
 .foswikiDiffDebug {
+    /* same styling as pre and code */
+    font-family: "Bitstream Vera Sans Mono","Andale Mono",Courier,monospace;
+    font-size:86%;
     white-space:pre;
 }
 tr.foswikiDiffDebug td {
