Item2051: fix possible sorting issue in release branch as well
git-svn-id: http://svn.foswiki.org/branches/Release01x00@4872 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/EditTablePlugin/pub/System/EditTablePlugin/edittable_src.css
+++ b/EditTablePlugin/pub/System/EditTablePlugin/edittable_src.css
@@ -8,11 +8,14 @@
 .editTableEdit td, 
 .editTableEdit th {
 	border-color:#eee;
+	padding:.5em;
 }
 .editTableInnerTable table,
 .editTableInnerTable th,
 .editTableInnerTable td {
 	border:none;
+	border-style:none;
+	border-width:0;
 	padding-top:0;
 }
 .editTableEditImageButton {
@@ -56,8 +59,8 @@
 .editTableRowSeparator td {
 	margin:0;
 	padding:0;
-	background-color:#eee;
-	height:6px;
+	background-color:#fafafa;
+	height:5px;
 	cursor:default;
 }
 .editTableMoveMode .editTableRowSeparator td {
