--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/button/jquery.button.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/button/jquery.button.css
@@ -5,7 +5,12 @@
 .jqButton:hover,
 .jqButton{background-color:transparent;background-image:url(btn_right.gif);background-position:top right;background-repeat:no-repeat;text-decoration:none;cursor:pointer;display:block;float:left;height:23px;padding:0px;color:black;font-size:13px;}.foswikiTopic a.jqButton,
 .patternTopic a.jqButton,
-.jqButton{margin:0px 8px 0px 0px;}.foswikiTopic a.jqButton:link:hover,
+.jqButton{margin:0px 8px 0px 0px;}.foswikiTopic a.jqButton.foswikiRight,
+.foswikiTopic a.jqButton.foswikiRight:hover,
+.patternTopic a.jqButton.foswikiRight,
+.patternTopic a.jqButton.foswikiRight:hover,
+.jqButton.foswikiRight:hover,
+.jqButton.foswikiRight{float:right;margin:0px 0px 0px 8px;}.foswikiTopic a.jqButton:link:hover,
 .foswikiTopic a.jqButton:hover,
 .patternTopic a.jqButton:link:hover,
 .patternTopic a.jqButton:hover,
