--- a/PatternSkin/pub/System/PatternSkin/style.css
+++ b/PatternSkin/pub/System/PatternSkin/style.css
@@ -85,12 +85,9 @@ h6 { font-size:95%; font-weight:bold; }
 h2, h3, h4, h5, h6 {
 	display:block;
 	/* give header a background color for easy scanning:*/
-	padding:.15em 10px;
+	padding:.25em 10px;
 	margin:1em -10px .35em -10px;
 	height:auto;	
-}
-h2 {
-	padding:1em 10px .15em 10px;
 }
 h1.patternTemplateTitle {
 	font-size:170%;
@@ -266,18 +263,17 @@ a.foswikiSubmit:visited:active {
 	border-style:solid;
 }
 .foswikiTable {
-	border-style:solid;
 	margin:2px 0;
 	border-collapse:collapse;
 }
 .foswikiTable td {
-	padding:3px 6px;
+	padding:.2em .5em;
 }
 .foswikiTable th {
-	padding:4px 6px;
+	padding:.4em .5em;
 }
 .foswikiTable .tableSortIcon {
-	margin:0 0 0 5px;
+	margin:0 0 0 .25em;
 }
 
 /*
