Item2172: add User To Group inputbox and button to WikiGroups topic - now we have a URL based way to add to groups (atm it will serialise into META:PREFERENCES, which will need to change.
UI Guys, please take a look and make the UI useable by normal users - next i'll add removeUserFromGroup.... and then finally the add user to group on registration (um 3 lines of code?)


git-svn-id: http://svn.foswiki.org/trunk@5169 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -429,6 +429,36 @@
 %MAKETEXT{"If you are developing a Foswiki application, see [_1] for a description of the correct parameters." args="%SYSTEMWEB%.CommandAndCGIScripts#%PARAM1%"}%
 
 %TMPL:END%
+
+%{-----------------------------------}%
+%TMPL:DEF{"no_users_to_add_to_group"}%
+---+++ %MAKETEXT{"No username specified"}%
+
+%MAKETEXT{"You need to specify a valid user to add to a Group."}%
+%TMPL:END%
+
+%TMPL:DEF{"no_group_specified_for_add_to_group"}%
+---+++ %MAKETEXT{"No GroupName specified"}%
+%MAKETEXT{"You need to specify a valid Group name to add users to a Group."}%
+
+%TMPL:END%
+
+%TMPL:DEF{"problem_adding_to_group"}%
+---+++ %MAKETEXT{"Errors adding Users to Groups"}%
+
+%MAKETEXT{"There were errors adding [_1] to the [_2] group. " args="%PARAM1%, %PARAM2%"}%
+
+%MAKETEXT{"Please check to ensure you have permssion to modify the group."}%
+
+%TMPL:END%
+
+%TMPL:DEF{"added_users_to_group"}%
+---+++ %MAKETEXT{"Success adding Users to Groups"}%
+
+%MAKETEXT{"[_1] added to the [_2] group. " args="%PARAM1%, %PARAM2%"}%
+
+%MAKETEXT{"See %MAINWEB%.WikiGroups to see the result."}%%TMPL:END%
+
 %{
     Messages for oopsleaseconflict
 }%
