Item2172: can now create a new group using the same manage API, including specifying an initial set of users
git-svn-id: http://svn.foswiki.org/trunk@5170 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -450,6 +450,9 @@
 
 %MAKETEXT{"Please check to ensure you have permssion to modify the group."}%
 
+%MAKETEXT{"See %MAINWEB%.WikiGroups to see the result."}%%TMPL:END%
+
+
 %TMPL:END%
 
 %TMPL:DEF{"added_users_to_group"}%
