Item2261: lease conflict page dosn't link properly to wikipages that aren't WikiWord's
git-svn-id: http://svn.foswiki.org/branches/Release01x00@5275 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -433,7 +433,7 @@
     Messages for oopsleaseconflict
 }%
 %TMPL:DEF{"lease_active"}%
-%MAKETEXT{"[_1] is editing [_2]." args="%PARAM1%, %WEB%.%TOPIC%"}%
+%MAKETEXT{"[_1] is editing [[[_2]]]." args="%PARAM1%, %WEB%.%TOPIC%"}%
 
 %MAKETEXT{"[_1] has been editing the topic for [_2] and the lease is still active for another [_3]." args="%PARAM1%, %PARAM2%, %PARAM3%"}%
 
