Item4673: added checkboxes for batch installs - and added uninstallation from configure as well
git-svn-id: http://svn.foswiki.org/trunk@5440 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/templates/extensions.tmpl
+++ b/core/lib/Foswiki/Configure/templates/extensions.tmpl
@@ -20,12 +20,16 @@
 
 <#-- table contents -->
 <#if table??>
+  <form action="${formAction}" method="POST">
+    <input type="hidden" name="action" value="ManageExtensions" />
 	<table class='configureExtensionsTable' border='0' cellspacing='0'>
 		${table}
 		<tr> 
 			<td colspan='999' class='configureTableOutside'>
-				Installed: ${installedCount} out of ${allCount}
+				Currently Installed: ${installedCount} out of ${allCount}
 			</td>
 		</tr>
 	</table>
+    <input type="submit" name="submit" value="Add/remove selected extensions" />;
+  </form>
 </#if>
