Item4673: Item5278: make extender.pl friendlier to configure; improved feedback and functionality
git-svn-id: http://svn.foswiki.org/trunk@5446 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/templates/extensions.tmpl
+++ b/core/lib/Foswiki/Configure/templates/extensions.tmpl
@@ -3,8 +3,12 @@
 <h2>Install and Update Extensions</h2>
 
 <div class="foswikiHelp">
-	<strong>If you are installing extensions</strong><br />
-	Note that the webserver user has to be able to write files everywhere in your Foswiki installation. Otherwise you may see 'No permission to write' errors during extension installation.
+	<strong>Note:</strong> To install extensions, the webserver user has to be able to write files everywhere in your Foswiki installation. Otherwise you may see 'No permission to write' errors.
+<p />
+    Use the checkboxes to select the operations you want to perform, and then
+    select the "Add/remove selected extensions" button at the bottom of the page.
+<p />
+<strong>Warning</strong>; if you have modified <u>any</u> of the files packaged with an extension that you uninstall, upgrade or re-install, then your changes will be lost.
 </div>
 
 <#if consultedLocations??>
