--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/superfish/jquery.superfish.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/superfish/jquery.superfish.css
@@ -1,13 +1,15 @@
-.superfish, .superfish *{margin:0;padding:0;list-style:none;line-height:2.5em;}.superfish ul{position:absolute;top:-999em;width:9.45em;}.superfish ul li{width:100%;}.superfish li{padding-left:1em;float:left;position:relative;z-index:99;}.superfish a{display:block;}.superfish li:hover ul, ul.superfish li.sfHover ul
-{left:-1px;top:2.5em;}.superfish li:hover li ul,
-.superfish li.sfHover li ul{top:-999em;}.superfish li li:hover ul, ul.superfish li li.sfHover ul {left:10.45em;top:-1px;}.superfish li li:hover li ul,
-.superfish li li.sfHover li ul{top:-999em;}.superfish li li li:hover ul, ul.superfish li li li.sfHover ul {left:10.45em;top:-1px;}.superfish li:hover ul,
-.superfish li li:hover ul,
-.superfish li li li:hover ul{top:-999em;}embed, object{position:relative;z-index:0;}ul.superfish{float:left;margin-bottom:1.5em;color:white;}ul.superfish li{background-color:#BDD2FF;border-left:1px solid #fff;border-top:1px solid #CFDEFF;width:9.45em;}ul.superfish a{text-decoration:none;color:inherit;}ul.superfish li:hover,
-ul.superfish li.sfHover,
-ul.superfish a:focus,
-ul.superfish a:hover,
-ul.superfish a:active{background-color:#CFDEFF;background-image:url(MenuArrow.gif);background-position:95% 85%;background-repeat:no-repeat;}ul.superfish li li{background-color:#AABDE6;}ul.superfish li li li{background-color:#9AAEDB;}ul.superfish li li li li{background-color:#707E9F;}ul.superfish li.sfHover ul{opacity:0.95;}ul.superfish li ul li ul li ul li,
-ul.superfish li ul li ul li,
-ul.superfish li ul li,
-ul.superfish li{background-image:url(MenuArrow.gif);background-position:95% 85%;background-repeat:no-repeat;}ul.superfish .sfPath{background:red;}
+.sf-menu, .sf-menu *{margin:0;padding:0;list-style:none;}.sf-menu{line-height:1.0;}.sf-menu ul{position:absolute;top:-999em;width:10em;}.sf-menu ul li{width:100%;}.sf-menu li:hover{visibility:inherit;}.sf-menu li{float:left;position:relative;}.sf-menu a{display:block;position:relative;}.sf-menu li:hover ul,
+.sf-menu li.sfHover ul{left:0;top:2.5em;z-index:99;}ul.sf-menu li:hover li ul,
+ul.sf-menu li.sfHover li ul{top:-999em;}ul.sf-menu li li:hover ul,
+ul.sf-menu li li.sfHover ul{left:10em;top:0;}ul.sf-menu li li:hover li ul,
+ul.sf-menu li li.sfHover li ul{top:-999em;}ul.sf-menu li li li:hover ul,
+ul.sf-menu li li li.sfHover ul{left:10em;top:0;}.sf-menu{float:left;margin-bottom:1em;}.sf-menu a{border-left:1px solid #fff;border-top:1px solid #CFDEFF;padding:.75em 1em;text-decoration:none;}.sf-menu a, .sf-menu a:visited{color:#13a;}.sf-menu li{background:#BDD2FF;}.sf-menu li li{background:#AABDE6;}.sf-menu li li li{background:#9AAEDB;}.sf-menu li:hover, .sf-menu li.sfHover,
+.sf-menu a:focus, .sf-menu a:hover, .sf-menu a:active{background:#CFDEFF;outline:0;}.sf-menu a.sf-with-ul{padding-right:2.25em;min-width:1px;}.sf-sub-indicator{position:absolute;display:block;right:.75em;top:1.05em;width:10px;height:10px;text-indent:-999em;overflow:hidden;background:url('MenuArrow.png') no-repeat -10px -100px;}a > .sf-sub-indicator{top:.8em;background-position:0 -100px;}a:focus > .sf-sub-indicator,
+a:hover > .sf-sub-indicator,
+a:active > .sf-sub-indicator,
+li:hover > a > .sf-sub-indicator,
+li.sfHover > a > .sf-sub-indicator{background-position:-10px -100px;}.sf-menu ul .sf-sub-indicator{background-position:-10px 0;}.sf-menu ul a > .sf-sub-indicator{background-position:0 0;}.sf-menu ul a:focus > .sf-sub-indicator,
+.sf-menu ul a:hover > .sf-sub-indicator,
+.sf-menu ul a:active > .sf-sub-indicator,
+.sf-menu ul li:hover > a > .sf-sub-indicator,
+.sf-menu ul li.sfHover > a > .sf-sub-indicator{background-position:-10px 0;}.sf-shadow ul{background:url('MenuShadow.png') no-repeat bottom right;padding:0 8px 9px 0;-moz-border-radius-bottomleft:17px;-moz-border-radius-topright:17px;-webkit-border-top-right-radius:17px;-webkit-border-bottom-left-radius:17px;}.sf-shadow ul.sf-shadow-off{background:transparent;}
