Item4673: improved copy and layout of multiple select page
git-svn-id: http://svn.foswiki.org/trunk@5514 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/base.css
+++ b/core/lib/Foswiki/Configure/resources/base.css
@@ -149,7 +149,7 @@ padding:1em 20px;
 .foswikiHelp {
 background-color:#f8fbfc;
 margin:0 0 -1px;
-padding:1em;
+padding:1em 2em;
 }
 
 .foswikiLast,.foswikiForm .foswikiLast,.foswikiTable .foswikiLast {
