--- a/core/lib/Foswiki/Configure/resources/styles.css
+++ b/core/lib/Foswiki/Configure/resources/styles.css
@@ -243,7 +243,7 @@ table.configureSectionValues .foswikiTextarea {
 
 /* WARN and ERROR */
 .configureWarn {
-	  color:#333;
+	  color:#f60;
 }
 
 .configureRootSection .foswikiAlert {
@@ -292,7 +292,7 @@ div.configureInfo {
 
 /* --- EXTENSIONS --- */
 table.configureExtensionsTable {
-	margin:2em 0;
+	margin:0;
 	border:none;
 }
 table.configureExtensionsTable td,
@@ -300,7 +300,7 @@ table.configureExtensionsTable th {
 	padding:.4em 1em;
 }
 table.configureExtensionsTable td {
-	background:#fff;
+	background:transparent;
 }
 table.configureExtensionsTable th {
 	font-weight:bold;
@@ -320,20 +320,47 @@ table.configureExtensionsTable td.configureExtensionData {
 table.configureExtensionsTable td.configureExtensionDataFirst {
 	padding-left:4em;
 }
-table.configureExtensionsTable td.configureExtensionAction {
-	width:9em;	
-	border-left:1px dashed #dfdfdf;
+table.configureExtensionsTable tr.configureInstall,
+table.configureExtensionsTable tr.configureInstall td {
+	background:#fff;
 }
-table.configureExtensionsTable .configureReInstall {
+table.configureExtensionsTable tr.configureReInstall,
+table.configureExtensionsTable tr.configureReInstall td {
 	background:#e8feea;
 }
-table.configureExtensionsTable .configureUpgrade {
+table.configureExtensionsTable tr.configureUpgrade,
+table.configureExtensionsTable tr.configureUpgrade td {
 	background:#fff7f0;
 }
-table.configureExtensionsTable .configurePseudoInstalled {
+table.configureExtensionsTable tr.configurePseudoInstalled,
+table.configureExtensionsTable tr.configurePseudoInstalled td {
 	background:#f2f2f2;
 }
-table.configureExtensionsTable .configureAlienExtension {}
+table.configureExtensionsTable tr.configureAlienExtension {}
+
+/* action column */
+table.configureExtensionsTable th.configureExtensionAction,
+table.configureExtensionsTable td.configureExtensionAction {
+	width:9em;	
+}
+table.configureExtensionsTable td.configureExtensionAction {
+	background:#EDF5FC;
+}
+table.configureExtensionsTable tr.configureInstall td.configureExtensionAction {
+	background:#EDF5FC;
+}
+table.configureExtensionsTable tr.configureReInstall td.configureExtensionAction {
+	background:#d8f4e7;
+}
+table.configureExtensionsTable tr.configureUpgrade td.configureExtensionAction {
+	background:#ededed;
+}
+table.configureExtensionsTable tr.configurePseudoInstalled td.configureExtensionAction {
+	background:#e1e9ef;
+}
+.configureConsultedLocations {
+	margin:2em 0;
+}
 
 /* --- EXPERT ---*/
 
