--- a/core/lib/Foswiki/Configure/templates/extensions.tmpl
+++ b/core/lib/Foswiki/Configure/templates/extensions.tmpl
@@ -3,16 +3,12 @@
 <h2>Install and Update Extensions</h2>
 
 <div class="foswikiHelp">
-	<strong>Note:</strong> To install extensions, the webserver user has to be able to write files everywhere in your Foswiki installation. Otherwise you may see 'No permission to write' errors.
-<p />
-    Use the checkboxes to select the operations you want to perform, and then
-    select the "Add/remove selected extensions" button at the bottom of the page.
-<p />
-<strong>Warning</strong>; if you have modified <u>any</u> of the files packaged with an extension that you uninstall, upgrade or re-install, then your changes will be lost.
+	<p><strong>Note:</strong> To install extensions, the webserver user has to be able to write files everywhere in your Foswiki installation. Otherwise you may see 'No permission to write' errors.</p>
+    <p class="configureWarn"><strong>Warning:</strong> if you have modified <em>any</em> of the files packaged with an extension that you uninstall, upgrade or re-install, then your changes will be lost.</p>
 </div>
 
 <#if consultedLocations??>
-	Consulted locations: ${consultedLocations??join(", ")}
+	<div class="configureConsultedLocations">Consulted locations: ${consultedLocations??join(", ")}</div>
 </#if>
 
 <#-- errors -->
@@ -28,12 +24,7 @@
     <input type="hidden" name="action" value="ManageExtensions" />
 	<table class='configureExtensionsTable' border='0' cellspacing='0'>
 		${table}
-		<tr> 
-			<td colspan='999' class='configureTableOutside'>
-				Currently Installed: ${installedCount} out of ${allCount}
-			</td>
-		</tr>
 	</table>
-    <input type="submit" name="submit" value="Add/remove selected extensions" />;
+	<div class="configureActions"><div class='foswikiLeft'>Currently installed: ${installedCount} out of ${allCount}</div> <input type="submit" name="submit" class="foswikiSubmit" value="Install / uninstall selected extensions" /></div>
   </form>
 </#if>
