--- a/core/lib/Foswiki/Configure/templates/installed.tmpl
+++ b/core/lib/Foswiki/Configure/templates/installed.tmpl
@@ -1,3 +1,4 @@
+<strong>Where to go from here?</strong>
 <ul>
 	<li><a href='${frontpageUrl}'>Go to your Foswiki front page</a></li>
 	<li><a href='${configureUrl}'>Return to configuration </a></li>
