Item118: focus the password when displaying the save page Item8345: only offer to save when there really has been a change
git-svn-id: http://svn.foswiki.org/trunk@5600 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/base.css
+++ b/core/lib/Foswiki/Configure/resources/base.css
@@ -199,3 +199,7 @@ padding-left:2em;
 .foswikiHidden,.foswikiMakeVisible,.foswikiMakeVisibleBlock {
 display:none;
 }
+
+.foswikiValueChanged { 
+  border: 2px solid red;
+}
