--- a/core/lib/Foswiki/Configure/templates/main.tmpl
+++ b/core/lib/Foswiki/Configure/templates/main.tmpl
@@ -42,7 +42,7 @@
 
 	<div id="ft">
 		<div class="configureActions">
-			<input type='submit' class='foswikiSubmit' name='action' value='Save changes' />
+			<input type='submit' class='enableWhenSomethingChanged foswikiSubmitDisabled' disabled="disabled" name='action' value='Save changes' />
 		</div>
 	</div>
 
