Item2405: remove form and attachments from backlinks template
git-svn-id: http://svn.foswiki.org/branches/Release01x00@5608 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/backlinks.tmpl
+++ b/core/templates/backlinks.tmpl
@@ -7,3 +7,5 @@
 
 %TMPL:DEF{"topicinfo"}%%TMPL:END%
 %TMPL:DEF{"topicaction"}%%TMPL:END%
+%TMPL:DEF{"form"}%%TMPL:END%
+%TMPL:DEF{"attachments"}%%TMPL:END%
