Item2408: Make action buttons easier to skin
git-svn-id: http://svn.foswiki.org/trunk@5614 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/oopsaccessdenied.tmpl
+++ b/core/templates/oopsaccessdenied.tmpl
@@ -4,7 +4,7 @@
 %TMPL:DEF{"titleaction"}%%MAKETEXT{"(access denied)"}% %TMPL:END%
 %TMPL:DEF{"webaction"}% *%MAKETEXT{"Attention"}%* %TMPL:END%
 %TMPL:DEF{"heading"}%%MAKETEXT{"Access Denied"}%%TMPL:END%
-%TMPL:DEF{"topicactionbuttons"}% [[%USERSWEB%.%HOMETOPIC%][%MAKETEXT{"OK"}%]] %TMPL:END%
+%TMPL:DEF{"topicactionbuttons"}% <span>[[%USERSWEB%.%HOMETOPIC%][%MAKETEXT{"OK"}%]]</span> %TMPL:END%
 
 %TMPL:DEF{"message"}%
 %INSTANTIATE%
