Item5366: give reset and bulkreset confirmation dialogs an OK button - both going back to the topic they came from
git-svn-id: http://svn.foswiki.org/branches/Release01x00@5624 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -169,6 +169,8 @@
 %PARAM1%
 
 %MAKETEXT{"Users with automatically generated passwords should proceed immediately to ~[~[[_1]~]~[change password~]~] to change their password to something memorable." args="%SCRIPTURLPATH{"view"}%/%SYSTEMWEB%/ChangePassword"}%
+
+*[[%BASEWEB%.%BASETOPIC%][%MAKETEXT{"OK"}%]]*
 %TMPL:END%
 %TMPL:DEF{"password_changed"}%
 ---+++ %MAKETEXT{"Password changed successfully!"}%
