Item8353: Support 10x80 style specifications for using textareas on all text field types
git-svn-id: http://svn.foswiki.org/trunk@5657 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/styles.css
+++ b/core/lib/Foswiki/Configure/resources/styles.css
@@ -238,7 +238,8 @@ table p {
 }
 table.configureSectionValues .foswikiInputField,
 table.configureSectionValues .foswikiTextarea {
-	width:55%;
+    font-family: "Bitstream Vera Sans Mono","Andale Mono",Courier,monospace;
+    font-size:86%;
 }
 
 /* WARN and ERROR */
