Item2413: oops and other default html title output should show the topic and web that the user actually requested, ie BASETOPIC and BASEWEB
git-svn-id: http://svn.foswiki.org/branches/Release01x00@5658 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -22,7 +22,7 @@
 %TMPL:DEF{"script:skintemplate"}%%TMPL:END%
 %TMPL:DEF{"script:topictemplate"}%%TMPL:END%
 
-%TMPL:DEF{"windowtitle"}%<title>%TMPL:P{"titleaction"}% <nop>%TOPIC%%TMPL:P{"titlesep"}%%WEB%%TMPL:P{"titlesep"}%<nop>%WIKITOOLNAME%</title>%TMPL:END%
+%TMPL:DEF{"windowtitle"}%<title>%TMPL:P{"titleaction"}% <nop>%BASETOPIC%%TMPL:P{"titlesep"}%BASE%WEB%%TMPL:P{"titlesep"}%<nop>%WIKITOOLNAME%</title>%TMPL:END%
 
 %TMPL:DEF{"head"}%<head>
 	%TMPL:P{"windowtitle"}%
