Item8345: improve style of disabled submit button
git-svn-id: http://svn.foswiki.org/trunk@5673 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/pattern.css
+++ b/core/lib/Foswiki/Configure/resources/pattern.css
@@ -301,7 +301,7 @@ blockquote h2 {
 	background-color:transparent;
 }
 
-.foswikiSubmit,.foswikiSubmitDisabled {
+.foswikiSubmit {
 	background-image:url(configure?action=resource;resource=bg_submit_gradient.gif);
 	background-repeat:repeat-x;
 }
