Item2463: with the first setup (no LocalSite.cfg) the user should just go on and save the precalculated settings, so the Save button should not be disabled; but in any case do not disable the Save button, the user might have reloaded the page (and would get stuck then); use css selector to focus password field; improve readability of some Webserver data (cookies and CGI user); in Other Extensions, do not assume we know the user did not make any changes, otherwise show red alert
git-svn-id: http://svn.foswiki.org/trunk@5731 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/styles.css
+++ b/core/lib/Foswiki/Configure/resources/styles.css
@@ -247,13 +247,14 @@ table.configureSectionValues .foswikiTextarea {
 	  color:#f60;
 }
 
-.configureRootSection .foswikiAlert {
+.configureRootSection div.foswikiAlert {
 	background-color:#fff;
+	color:#000;
 	border:1px solid #e6e6e6;
 	margin:.25em 0 .7em 0;
 	padding:7px 1em;
 }
-table.configureSectionValues .foswikiAlert {
+table.configureSectionValues div.foswikiAlert {
 	padding-left:3em;
 }
 div.configureInfoText {
@@ -553,7 +554,7 @@ div.configureMessageBox {
 	vertical-align:middle;
 	background-color:#fff;
 }
-.configureMessageBox .foswikiAlert {
+.configureMessageBox div.foswikiAlert {
 	margin:0;
 	padding-left:3em;
 }
