--- a/core/lib/Foswiki/Configure/templates/authorize.tmpl
+++ b/core/lib/Foswiki/Configure/templates/authorize.tmpl
@@ -52,7 +52,7 @@
 			<h2>In order to save your changes, Configure requires that you type your password.</h2>
 		</div>
 		<div class='foswikiFormStep'>
-			<p>Password: <input type="password" name='cfgAccess' size='30' maxlength='80' class='foswikiInputField' />
+			<p>Password: <input type="password" name='cfgAccess' size='30' maxlength='80' class='foswikiInputField foswikiFocus' />
 			&nbsp; <input type="submit" class='foswikiSubmit' value='Save changes' /></p>
 		</div>
 		<div class='foswikiFormStep configureFormStepOutside'>
@@ -75,7 +75,7 @@
 		</div>
 		<div class='foswikiFormStep'>
 			<p>Current password:<br />
-			<input type="password" name='cfgAccess' size='30' maxlength='80' class='foswikiInputField' /></p>
+			<input type="password" name='cfgAccess' size='30' maxlength='80' class='foswikiInputField foswikiFocus' /></p>
 			${localNotePasswordForgotten}
 		</div>
 		${localFormNewPassword}
